--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 # MongoDB Atlas Connection
 # Password special characters are URL-encoded: @ becomes %40
-MONGODB_URI=mongodb+srv://rarerabbit:r%40rer%40bbit@rarerabbit.uyfrgct.mongodb.net/thehouseofrare?retryWrites=true&w=majority&appName=rarerabbit
+MONGODB_URI=mongodb+srv://mohansivathota:mohansivathota@cluster0.1hobjis.mongodb.net/?appName=Cluster0
 
-
+JWT_SECRET=shewear_super_secret_jwt_key_2024
 
 # Admin Authentication
 ADMIN_EMAIL=mohansivathota@gmail.com
