--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Frontend Environment Variables
 # API Configuration
 VITE_API_URL=http://localhost:5000/api
+# VITE_API_URL=https://shewear-server.onrender.com/api
+
 
 # Razorpay
 VITE_RAZORPAY_KEY_ID=rzp_test_RbCZ4pR7DKMosu
