--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
         sync: false
       - key: REDIS_URL
         sync: false
+      - key: REDIS_PASSWORD
+        sync: false
       - key: JWT_SECRET
         sync: false
       - key: FIREBASE_ADMIN_SDK
